--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <title>Phaser 3 TypeScript Starter</title>
     <meta charset="utf-8" />
-    <style>
-      body {
-        margin: 0;
-      }
-    </style>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="css/index.css">
+
     <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
     <div id="game"></div>
+    <video autoplay></video>
   </body>
 </html>
