--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <body>
     <div id="game"></div>
     <video autoplay></video>
+    <canvas id="webcam-image"></canvas>
+    <img id="photo" />
   </body>
 </html>
